# beam-parser

./: pyproject.toml
beamparse/: __init__.py
beamparse/inputs/: constants.py  factory.py  osm2physsim.py  population.py
beamparse/inputs/templates/: households.xml.j2  physsim-network.xml.j2  population.xml.j2
beamparse/inputs/tests/: test_factory.py  test_population.py
