[tool.pdm]
includes = []
[tool.pdm.dev-dependencies]
dev = [
    "pytest<7.0.0,>=6.2.4",
    "ipython<8.0.0,>=7.23.1",
]

[tool.pytest.ini_options]
testpaths = ["beamparse"]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "beamparse"
version = "0.0.1"
description = ""
authors = [
    {name = "Thomas Tu", email = "tt169@humboldt.edu"},
]
dependencies = ["lxml<5.0.0,>=4.6.3", "Jinja2<4.0.0,>=3.0.1", "pyproj~=3.1", "black~=21.6b0"]
requires-python = ">=3.8"
dynamic = ["classifiers", "classifiers"]
license = {text = "bsd-3-clause"}

[project.urls]
homepage = ""
